force-app/main/default/objects/Shipment_Line_Item__c/Shipment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Shipment Line Item</label>
    <nameField>
        <displayFormat>SLI-{YYYYMM}-{00000}</displayFormat>
        <label>Shipment Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>