force-app/main/default/objects/Shipment_Line_Item__c/fields/Chassis_No__c.field-meta.xml
<CustomField>
    <fullName>Chassis_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Chassis No.</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>