force-app/main/default/objects/Shipment_Line_Item__c/fields/Colour_Code__c.field-meta.xml
<CustomField>
    <fullName>Colour_Code__c</fullName>
    <label>Colour Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>