force-app/main/default/objects/Shipment_Line_Item__c/fields/Engine_No__c.field-meta.xml
<CustomField>
    <fullName>Engine_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Engine No.</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>