force-app/main/default/objects/Shipment_Line_Item__c/fields/FOB_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOB_Amount__c</fullName>
    <label>FOB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>