force-app/main/default/objects/Shipment_Line_Item__c/fields/FOB_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>FOB_Amount_Currency_Code__c</fullName>
    <label>FOB Amount Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>