force-app/main/default/objects/Shipment_Line_Item__c/fields/Franchise_Code__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Code__c</fullName>
    <label>Franchise Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Franchise_Code</valueSetName>
    </valueSet>
</CustomField>