force-app/main/default/objects/Shipment_Line_Item__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manufacturer Invoice No.</description>
    <label>Invoice No.</label>
    <referenceTo>Manufacturer_Invoice__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>