force-app/main/default/objects/Shipment_Line_Item__c/fields/Item_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Group_Code__c</fullName>
    <description>This field is the concatenation of HS Code and Product Code</description>
    <formula>TN_HS_Code__r.Name &amp; TN_CASC_Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is the concatenation of HS Code and Product Code</inlineHelpText>
    <label>Item Group Code</label>
    <type>Text</type>
</CustomField>