force-app/main/default/objects/Shipment_Line_Item__c/fields/Manufacturer_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Ref_No__c</fullName>
    <description>For CIT</description>
    <label>Manufacturer Ref. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>