force-app/main/default/objects/Shipment_Line_Item__c/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>