force-app/main/default/objects/Shipment_Line_Item__c/fields/Product_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN CASC Product Code Description</label>
    <referenceTo>Product_Code__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>