force-app/main/default/objects/Shipment_Line_Item__c/fields/Production_Month__c.field-meta.xml
<CustomField>
    <fullName>Production_Month__c</fullName>
    <label>Production Month</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>