force-app/main/default/objects/Shipment_Line_Item__c/fields/Shipment_Line_Item_Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line_Item_Sequence_No__c</fullName>
    <label>Shipment Line Item Sequence No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>