force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_CASC_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_CASC_Product_Code__c</fullName>
    <formula>Product_Code_Description__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN CASC Product Code</label>
    <type>Text</type>
</CustomField>