force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_CASC_Product_Qty__c.field-meta.xml
<CustomField>
    <fullName>TN_CASC_Product_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <label>TN CASC Product Qty</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>