force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_CASC_Product_UOM__c.field-meta.xml
<CustomField>
    <fullName>TN_CASC_Product_UOM__c</fullName>
    <defaultValue>&quot;NMB&quot;</defaultValue>
    <label>TN CASC Product UOM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>