force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_CIF_FOB_Amount__c.field-meta.xml
<CustomField>
    <fullName>TN_CIF_FOB_Amount__c</fullName>
    <label>TN CIF/FOB Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>