force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_CIF_FOB_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_CIF_FOB_Currency_Code__c</fullName>
    <label>TN CIF/FOB Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>