force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Duty_Type__c.field-meta.xml
<CustomField>
    <fullName>TN_Duty_Type__c</fullName>
    <formula>TN_HS_Code__r.Duty_Rate_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Duty Type</label>
    <type>Text</type>
</CustomField>