force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Excise_Duty_Rate__c.field-meta.xml
<CustomField>
    <fullName>TN_Excise_Duty_Rate__c</fullName>
    <label>TN Excise Duty Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>