force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Excise_Duty_Rate_UOM__c.field-meta.xml
<CustomField>
    <fullName>TN_Excise_Duty_Rate_UOM__c</fullName>
    <label>TN Excise Duty Rate UOM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>