force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_GST__c.field-meta.xml
<CustomField>
    <fullName>TN_GST__c</fullName>
    <defaultValue>0.7</defaultValue>
    <label>TN GST %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>