force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>TN_GST_Amount__c</fullName>
    <label>TN GST Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>