force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_HS_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_HS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN HS Code</label>
    <referenceTo>HS_Type__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>