force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_HS_Qty__c.field-meta.xml
<CustomField>
    <fullName>TN_HS_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <label>TN HS Qty</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>