force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_HS_Type__c.field-meta.xml
<CustomField>
    <fullName>TN_HS_Type__c</fullName>
    <formula>TN_HS_Code__r.HS_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN HS Type</label>
    <type>Text</type>
</CustomField>