force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>TN_Item_Description__c</fullName>
    <formula>TN_HS_Code__r.Item_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Item Description</label>
    <type>Text</type>
</CustomField>