force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Permit_No__c.field-meta.xml
<CustomField>
    <fullName>TN_Permit_No__c</fullName>
    <label>TN Permit No.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>