force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Total_No_of_Items__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_No_of_Items__c</fullName>
    <label>TN Total No. of Items</label>
    <length>5</length>
    <type>Text</type>
</CustomField>