force-app/main/default/objects/Shipment_Line_Item__c/fields/TN_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>TN_Vehicle_Type__c</fullName>
    <label>TN Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>