force-app/main/default/objects/Shipment_Line_Item__c/fields/Vehicle_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Shipment__c</fullName>
    <label>Vehicle Shipment</label>
    <referenceTo>Vehicle_Shipment__c</referenceTo>
    <relationshipLabel>Shipment Line Items</relationshipLabel>
    <relationshipName>Shipment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>