force-app/main/default/objects/Shipment_Line_Item__c/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <label>Vessel Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>