force-app/main/default/objects/Shipment_Line_Item__c/recordTypes/MF_Shipment_Line_Items.recordType-meta.xml
<RecordType>
    <fullName>MF_Shipment_Line_Items</fullName>
    <active>true</active>
    <label>MF/DPS Shipment Line Items</label>
</RecordType>