force-app/main/default/objects/Shipment_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>