force-app/main/default/objects/Shipment_Line_Item__c/listViews/Unmatched_Shipment.listView-meta.xml
<ListView>
    <fullName>Unmatched_Shipment</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Unmatched Shipment</label>
</ListView>